node-setup.yaml
apiVersion: apps/v1
kind: DaemonSet
metadata:
  name: node-taint-setup
spec:
  selector:
    matchLabels:
      name: node-taint-setup
  template:
    metadata:
      labels:
        name: node-taint-setup
    spec:
      serviceAccountName: node-taint-sa
      containers:
      - name: kubectl
        image: bitnami/kubectl
        command: ["/bin/sh", "-c"]
        args:
        - >
          while true; do
            kubectl taint nodes -l doks.digitalocean.com/node-pool=neo4j-pool dedicated=neo4j:NoSchedule --overwrite;
            kubectl taint nodes -l doks.digitalocean.com/node-pool=api-pool dedicated=api:NoSchedule --overwrite;
            sleep 300;
          done
