neo4j-deployment.yaml
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: neo4j-deployment
spec:
  serviceName: neo4j
  replicas: 1
  selector:
    matchLabels:
      app: neo4j
  template:
    metadata:
      labels:
        app: neo4j
    spec:
      nodeSelector:
        doks.digitalocean.com/node-pool: neo4j-pool
      tolerations:
      - key: "dedicated"
        operator: "Equal"
        value: "neo4j"
        effect: "NoSchedule"
      containers:
      - name: neo4j
        image: neo4j:4.4-community
        ports:
        - containerPort: 7474
        - containerPort: 7473
        - containerPort: 7687
        volumeMounts:
        - name: data
          mountPath: /data
        - name: neo4j-certificates
          mountPath: /var/lib/neo4j/certificates
        resources:
          requests:
            memory: "2Gi"
            cpu: "1"
          limits:
            memory: "4Gi"
            cpu: "2"
      volumes:
      - name: certificates
        secret:
          secretName: neo4j-tls
      - name: neo4j-certificates
        emptyDir: {}
  volumeClaimTemplates:
  - metadata:
      name: data
    spec:
      accessModes: ["ReadWriteOnce"]
      resources:
        requests:
          storage: 10Gi
---
apiVersion: v1
kind: Service
metadata:
  name: neo4j-service
spec:
  selector:
    app: neo4j
  ports:
    - name: http
      protocol: TCP
      port: 7474
      targetPort: 7474
    - name: https
      protocol: TCP
      port: 7473
      targetPort: 7473
    - name: bolt
      protocol: TCP
      port: 7687
      targetPort: 7687
  type: ClusterIP
---
apiVersion: v1
kind: Service
metadata:
  name: neo4j-bolt-service
spec:
  selector:
    app: neo4j
  ports:
    - protocol: TCP
      port: 7687
      targetPort: 7687
  type: LoadBalancer
