neo4j-services.yaml
apiVersion: v1
kind: Service
metadata:
  name: neo4j-http
  namespace: neo4j
spec:
  selector:
    app: neo4j
  ports:
    - protocol: TCP
      port: 7474
      targetPort: 7474
  type: ClusterIP
---
apiVersion: v1
kind: Service
metadata:
  name: neo4j-bolt
  namespace: neo4j
spec:
  selector:
    app: neo4j
  ports:
    - protocol: TCP
      port: 7687
      targetPort: 7687
  type: ClusterIP
