kub-deploy.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: flask-restx-api-deployment
spec:
  replicas: 3
  selector:
    matchLabels:
      app: flask-restx-api
  template:
    metadata:
      labels:
        app: flask-restx-api
    spec:
      containers:
      - name: flask-restx-api
        image: registry.digitalocean.com/notello/api-dev
        ports:
        - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: flask-restx-api-service
spec:
  selector:
    app: flask-restx-api
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
  type: ClusterIP
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: flask-restx-api-ingress
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - dev.notello.ai
    secretName: flask-restx-api-tls
  rules:
  - host: dev.notello.ai
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: flask-restx-api-service
            port: 
              number: 80
