traefik-api-deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: flask-restx-api-deployment
  namespace: neo4j
spec:
  replicas: 3
  selector:
    matchLabels:
      app: flask-restx-api
  template:
    metadata:
      labels:
        app: flask-restx-api
    spec:
      nodeSelector:
        dedicated: api
      containers:
      - name: flask-restx-api
        image: registry.digitalocean.com/notello/api-dev:v1.23
        ports:
        - containerPort: 8080
      imagePullSecrets:
      - name: registry-notello
---
apiVersion: v1
kind: Service
metadata:
  name: flask-restx-api-service
  namespace: neo4j
spec:
  selector:
    app: flask-restx-api
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
  type: ClusterIP
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: flask-restx-api-ingress
  namespace: neo4j
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`api.notello.dev`)
      kind: Rule
      services:
        - name: flask-restx-api-service
          port: 80
