traefik-ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: neo4j-ingress
  namespace: neo4j
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`neo4j.notello.dev`) && PathPrefix(`/browser`)
      kind: Rule
      services:
        - name: my-neo4j-release
          port: 7474
    - match: Host(`neo4j.notello.dev`) && Header(`Upgrade`, `websocket`)
      kind: Rule
      services:
        - name: my-neo4j-release
          port: 7687
    - match: Host(`neo4j.notello.dev`)
      kind: Rule
      services:
        - name: my-neo4j-release
          port: 7474
---
# IngressRoute for Traefik Dashboard
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: traefik-dashboard
  namespace: traefik # Make sure this matches the namespace where Traefik is installed
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`traefik.notello.dev`)
      kind: Rule
      services:
        - name: api@internal
          kind: TraefikService
